# uxf

./: .gitignore  MANIFEST  README.md  TODO.md  pypi.sh  setup.py  st.sh  uxf.vim
eg/: slides-visit.py  slides.py  slides.sld  slides.uxf  slides1.py  slides2.py
misc/: epd2uxf.py  md2html.sh  tlm2uxf.py
py/: README.md  complex.uxf  doc.sh  eq.py  fraction.uxf  makeclass.py  pypi.sh  regression.py  setup.py  test_converters.py  test_sqlite.py  ttype-test.uxf  uxf.html  uxf.md  uxf.py  uxfcompare.py  uxfconvert.py  uxflint.py  uxfparser.py  visit.py
py/eg/: Config.py  README.md  Tlm.py  compare.py  eq.py  importer.py  include.py  master.py  merge.py  on_error.py  slides.sld  slides1.py  slides2.py  tlm.py  tlm_uxf.py  typecheck.py  visit.py
py/pxd1.egg-info/: PKG-INFO  SOURCES.txt
py/t/: benchmark.py  eq.py  gen.py  regression.py  (+13 more)
rs/: .rustfmt.toml  Cargo.toml  README.md
rs/src/: constants.rs  field.rs  lib.rs  list.rs  map.rs  output.rs  parser.rs  table.rs  tclass.rs  test_field.rs  test_list.rs  test_map.rs  test_table.rs  test_tclass.rs  test_utils.rs  test_value.rs  tests.rs  util.rs  value.rs
rs/tests/: test_field.rs  test_list.rs  test_map.rs  test_table.rs  test_tclass.rs  test_value.rs
t/: regression.py  t1.uxf  t10.uxf  t11.uxf  t12.uxf  t13.uxf  t14.uxf  t15.uxf  t16.uxf  t17.uxf  t18.uxf  t19.uxf  t2.uxf  t20.uxf  t21.uxf  t22.uxf  t23.uxf  t24.uxf  t25.uxf  t26.uxf  t27.uxf  t28.uxf  t29.uxf  t30.uxf  t31.uxf  t32.uxf  t33.uxf  t34.uxf  t35.uxf  t36.uxf  t37.uxf  t38.uxf  t39.uxf  t42.uxf  t43.uxf  t45.uxf  t47.uxf  t5.uxf  t6.uxf  t7.uxf  (+2 more)
test/: 0.csv  1.csv  2.csv  regression.py  test1.uxf  test10.uxf  test11.uxf  test12.uxf  test13.uxf  test2.uxf  test5.uxf  test7.uxf  test8.uxf
testdata/: e58.txt  i64.uxi  i65.uxi  i66.uxi  i67.uxi  i68.uxi  i69.uxi  ini.ini  l58.uxf  l59.uxf  l60.uxf  pair1.uxt  pair2.uxt  pairimportc.uxi  pairimportd.uxi  t0.uxf  t10.uxf  t11.uxf  t13.uxf  t15.uxf  t16.uxf  t19.uxf  t20.uxf  t22.uxf  t24.uxf  t26.uxf  t27.uxf  t32.uxf  t33.uxf  t36.uxf  t37.uxf  t38.uxf  t39.uxf  t40.uxf  t41.uxf  t44.uxf  t46.uxf  t49.uxf  t5.uxf  t50.uxf  (+18 more)
(+353 files in other folders)
