[package]
name = "uxf"
version = "0.1.0"
edition = "2021"
publish = true
authors = [ "Mark Summerfield <mark@qtrac.eu>",]
include = [ "Cargo.toml", "src/**/*.rs", "examples/**/*.rs",]
description = "uxf supports the UXF plain text human readable optionally typed storage format. UXF may serve as a convenient alternative to csv, ini, json, sqlite, toml, xml, or yaml."
documentation = "https://github.com/mark-summerfield/uxf"
homepage = "https://github.com/mark-summerfield/uxf"
readme = "README.md"
keywords = [ "uniform exhange format", "plain text format", "format", "exchange", "uniform", "uxf", "config", "ini", "settings", "csv", "configuration", "yaml", "toml", "ini", "xml", "json", "database"]
categories = [ "development-tools", "text-processing", "config", "parser-implementations", "encoding", "database"]
license = "GPL-3.0"

[badges.maintenance]
status = "passively-maintained"

[profile.release]
strip = true
opt-level = 3 # 3 is fastest binary; use "s" for smallest
lto = true

[dependencies]
